tooling/nargo_cli/tests/snapshots/execution_success/fold_distinct_return/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {
      "14990209321349310352": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _5",
    "private parameters indices : [_0]",
    "public parameters indices : [_1]",
    "return value indices : []",
    "BLACKBOX::RANGE [(_0, 32)] []",
    "BLACKBOX::RANGE [(_1, 32)] []",
    "EXPR [ (-1, _2) 3 ]",
    "CALL func 1: PREDICATE: EXPR [ 1 ]",
    "inputs: [_0, _1, _2], outputs: [_3, _4, _5]",
    "EXPR [ (1, _3) -25 ]",
    "func 1",
    "current witness index : _6",
    "private parameters indices : [_0, _1, _2]",
    "public parameters indices : []",
    "return value indices : [_3, _4, _5]",
    "BLACKBOX::RANGE [(_0, 32)] []",
    "BLACKBOX::RANGE [(_1, 32)] []",
    "BLACKBOX::RANGE [(_2, 32)] []",
    "EXPR [ (1, _0) (-1, _6) 20 ]",
    "BLACKBOX::RANGE [(_6, 32)] []",
    "EXPR [ (1, _3) (-1, _6) 0 ]",
    "EXPR [ (-1, _1) (1, _4) 0 ]",
    "EXPR [ (-1, _2) (1, _5) 0 ]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main",
    "new_field_in_array"
  ],
  "brillig_names": []
}
