tooling/nargo_cli/tests/snapshots/execution_success/fold_distinct_return/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
acir(inline) fn main f0 {
  b0(v0: u32, v1: u32):
    (no terminator instruction)
}
